--- a/pom.xml
+++ b/pom.xml
@@ -56,5 +56,10 @@
             <artifactId>spring-aspects</artifactId>
             <version>5.0.7.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>5.0.1.RELEASE</version>
+        </dependency>
     </dependencies>
 </project>
