--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,13 @@
             <version>${spring.version}</version>
         </dependency>
 
+        <!-- JAVAX API -->
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
