--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
         <maven.compiler.target>17</maven.compiler.target>
         <maven.compiler.source>17</maven.compiler.source>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring.version>5.3.9</spring.version>
+        <spring.version>5.3.16</spring.version>
     </properties>
 
     <dependencies>
@@ -38,6 +38,7 @@
         </dependency>
 
         <!-- JAVAX API -->
+        <!-- @PostConstruct @PreDestroy -->
         <dependency>
             <groupId>javax.annotation</groupId>
             <artifactId>javax.annotation-api</artifactId>
